Change the font

--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <title>Samed Kahyaoglu's Webspace</title>
 
     <link rel="stylesheet" href="./dist/style.css">
+    <link rel="stylesheet" href="./dist/font.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    <!--link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet"-->
 </head>
 <body>
-    <header>
         <h1 class="offscreen">Samed Kahyaoglu's Personal Webpage</h1>
         <div id="header">
             <div id="header-inside-box">
@@ -49,8 +54,14 @@
         Hello<br>
         Hello
     </main>
-    <footer>
-        
+    <footer id="footer">
+        <div id="footer-content">
+            <div class="footer-text">
+                <p>
+                    <span aria-hidden="true">&lt;&lt;</span> Samed Kahyaoglu <i style="font-size: 0.8em;" class="far fa-copyright"></i> 2021 <span aria-hidden="true">&gt;&gt;</span>
+                </p>
+            </div>
+        </div>
     </footer>
 
 </body>
