Fix menu item spacing

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
     <link rel="stylesheet" href="./dist/style.css">
     <link rel="stylesheet" href="./dist/font.css">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body>
@@ -23,17 +22,9 @@
                     <span class="logo-color-5">D</span>
                 </div>
                 <nav id="nav">
-                    <ul id="menu-list">
-                        <li>
-                            <a href="#">HOW</a>
-                        </li>
-                        <li>
-                            <a href="#">ABOUT</a>
-                        </li>
-                        <li>
-                            <a href="#">LINKS</a>
-                        </li>
-                    </ul>
+                    <ul id="menu-list"><li><a href="#">HOW</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">LINKS</a></li></ul>
                 </nav>
                 <div id="dropdown-menu">
                     <a href="#"><i class="fas fa-caret-square-down"></i></a>
