Add style to footer

--- a/index.html
+++ b/index.html
@@ -57,11 +57,9 @@
         </div>
     </main>
     <footer id="footer">
-        <div id="footer-content">
-            <div class="footer-text">
-                <p>
-                    <span aria-hidden="true">&lt;&lt;</span> Samed Kahyaoglu <i style="font-size: 0.8em;" class="far fa-copyright"></i> 2021 <span aria-hidden="true">&gt;&gt;</span>
-                </p>
+        <div id="footer-container">
+            <div id="footer-content">
+                <span aria-hidden="true">&lt;&lt;</span> Samed Kahyaoglu <i style="font-size: 0.8em;" class="far fa-copyright"></i> 2021 <span aria-hidden="true">&gt;&gt;</span>
             </div>
         </div>
     </footer>
